   Guillaume Munch-Maccagnoni, KC Sivaramakrishnan, Stefan Muenzel,
   Xavier Leroy)

- #12365: Add In_channel.input_bigarray, In_channel.really_input_bigarray,
  Out_channel.output_bigarray, Unix.read_bigarray, Unix.write_bigarray,
  Unix.single_write_bigarray.
  (Nicolás Ojeda Bär, review by Jeremy Yallop, Xavier Leroy, Gabriel Scherer,
   David Allsopp)

### Other libraries:

- #12213: Dynlink library, improve legibility of error messages
  (Samuel Hym, review by Gabriel Scherer and Nicolás Ojeda Bär)

### Tools:

- #12340: testsuite: collect known issues with current -short-paths
  implementation for existential types
  (Florian Angeletti, Samuel Hym, review by Florian Angeletti and Thomas Refis)

- #12147: ocamllex: Allow carriage returns at the end of line directives.
  (SeungCheol Jung, review by Nicolás Ojeda Bär)

- #12260: Fix invalid_argument on some external or module aliases in ocamlnat
  (Fabian Hemmer, review by Vincent Laviron)

- #12185: New script language for ocamltest.
  (Damien Doligez with Florian Angeletti, Sébastien Hinderer, Gabriel Scherer,
   review by Sébastien Hinderer and Gabriel Scherer)

- #12371: ocamltest: fix recursive expansion of variables.
  (Antonin Décimo, Damien Doligez, review by Sébastien Hinderer,
   Damien Doligez, Gabriel Scherer, and Xavier Leroy)

### Manual and documentation:

- #12338: clarification of the documentation of process related function in
  the unix module regarding the first element of args and shell's pid.
  (Christophe Raffalli, review by Florian Angeletti)

- #12352: Fix a typo in the documentation of Arg.write_arg
  (Christophe Raffalli, review by Florian Angeletti)

- #12473: Document in runtime/memory.c our current understanding of
  accesses to the OCaml heap from the C runtime code -- the problem
  of hybrid programs mixing two memory models.
  (Gabriel Scherer and Guillaume Munch-Maccagnoni, review by Olivier
   Nicole and Xavier Leroy)

### Compiler user-interface and warnings:
